syntax = "proto3";
package pb;

enum Err{
  Success = 0;
  OOS = 1;
}

message Student {
  int64 ID = 1;
  string Name = 2;
  int32 Age = 3;
}


enum Color{
  White = 0;
  Red = 1;
  Green = 2;
  Blue = 3;
}

message Car {
  Color VarEnum = 1;
  string VarString = 2;
  bool VarBool = 3;
  bool VarByte = 4;
  bool VarSbyte = 5;
  int32 VarInt16 = 6;
  uint32 VarUint16 = 7;
  int32 VarInt32 = 8;
  uint32 VarUint32 = 9;
  int64 VarInt64 = 10;
  uint64 VarUint64 = 11;
  float VarFloat32 = 12;
  double VarFloat64 = 13;
  Student VarStruct = 14;
  repeated int32 VarArray =15;
  repeated Student VarStructs = 16;
  repeated bool VarBools = 17;
  repeated string VarStrings = 18;
  repeated float  VarFloat32s = 19;
  repeated double VarFloat64s = 20;
  repeated Color VarEnums = 21;
  map<string,string> VarMap = 22;
  map<string,Student> VarMap1 = 23;
}

